Bug 251476 - Fix bug in VTTCue::toJSON() found by new libcpp assertions
Summary: Fix bug in VTTCue::toJSON() found by new libcpp assertions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-01-31 19:01 PST by Chris Dumez
Modified: 2023-02-01 11:31 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-01-31 19:01:29 PST
Fix bug in VTTCue::toJSON() found by new libcpp assertions. This is causing media/track/track-extended-descriptions.html to crash on some bots.
Comment 1 Chris Dumez 2023-01-31 19:01:37 PST
<rdar://104893184>
Comment 2 Chris Dumez 2023-01-31 19:04:03 PST
Pull request: https://github.com/WebKit/WebKit/pull/9425
Comment 3 EWS 2023-02-01 11:31:51 PST
Committed 259704@main (1a9f2a2c95a6): <https://commits.webkit.org/259704@main>

Reviewed commits have been landed. Closing PR #9425 and removing active labels.