Cherry-pick 259704@main (1a9f2a2c95a6). https://bugs.webkit.org/show_bug.cgi?id=251476

Fix bug in VTTCue::toJSON() found by new libcpp assertions
    https://bugs.webkit.org/show_bug.cgi?id=251476
    rdar://104893184

    Reviewed by Jer Noble.

    Fix bug in VTTCue::toJSON() found by new libcpp assertions. This was
    causing media/track/track-extended-descriptions.html to crash on some
    bots.

    The if condition was reversed.

    * Source/WebCore/html/track/VTTCue.cpp:
    (WebCore::VTTCue::toJSON const):

    Canonical link: https://commits.webkit.org/259704@main